Sampleapps_using_Ingress/pod-app1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: get
  name: get
spec:
  containers:
  - image: nginxdemos/hello
    name: get
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
