Sampleapps_using_Ingress/service-app1.yaml
# Alternatively you can create a pod and expose it which will create the below service automatically
# kubectl run hello --expose --image nginxdemos/hello:plain-text --port 80
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: hello
  type: ClusterIP
