Sampleapps_using_Ingress/ingress_rule_get.yaml
# Add the below host entried in your laptop/desktop host file
# 127.0.0.1 get.vinod.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: get
spec:
  rules:
    - host: get.vinod.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: get
                port:
                  number: 80
